[project]
name = "py-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.11",
    "langchain>=0.3.20",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
